DigIt CHANGE LOG
======================

2025/07/11 Added Session Load/Save XML Events;
           Added SES_ Events methods in MainForm to Update UI (must be completed);
           Added temporary PhysicalRectArrayToCropAreas method;

        10 Renamed the index/length vars to be more human-friendly, renamed LoadedFile to LoadedImageFile;
           Added GetEnabledActions;
           Remove all SES_ functions and Index/Length variables already in Session from the Main Form;

        09 Moved the Progress Form to MaxM_Forms;
           Moved the Progress interface to MaxM_Commons;
           Use of the IMM_Progress and IMM_MessageDlg interfaces from MaxM_Commons;
           Added Msg: IMM_MessageDlg to Bridge;
           Use of theBridge.MessageDlg in DigIt_Session;
           Added MessageDlg methods to Bridge;
           Added the Digit_Bridge_Impl_UI_Form unit to register interface implementations.

08 Switched MainForm to DigIt_Session Use (It must be thoroughly tested)

        07 Moved PhysicalSizeConvert in DigIt_Types;
           Changed use of TResolutionUnit to TPhysicalUnit in TDigItPhysicalSize;
           Use of TDigItPhysicalSize in Page Resize;
           function to Convert to/from  Physical/Resolution Unit (maybe deleted in future);

DigIt_Session don't use ImageManipulation Crop Areas but TPhysicalRectArray;
        02 Added Bridge_Impl SetProgressInterface to avoid Form Progress direct use;
           Added Bridge_Impl ProgressShow useful methods;
           Added TDigItResizeUnitType and TLoadSaveXMLMethod types;
           Changed PageResizeUnitType var type to TDigItResizeUnitType;
           Continued DigIt_Session implementation;

        01 Do not allow mode change by selecting an area; Changed Opacity to 64;

2025/06/27 Release 0.3

        25 Added Blank Pages handle in WizardBuildDuplex;
           Updated Languages;
           Some UI adjustments to accommodate the Italian language;
           Old Code Cleanup;
